<resources>
    <string name="app_name">Homework1</string>
    <string name="value_1_label">Value 1:</string>
    <string name="signed_integer_hint">Enter a signed integer</string>
    <string name="value_2_label">Value 2:</string>
    <string name="operator_label">Operator:</string>
    <string name="calculate_label">Calculate</string>
    <string name="result_label">Result</string>
    <string-array name="operators_array">
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>/</item>
        <item>%</item>
    </string-array>
</resources>
